# wasmtime-mysql

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: macos-release-assets.yml  windows-release-assets.yml
docs/: status.md
fixtures/: dev-command.wat
patches/mysql-wasi/: 0001-add-wasi-port-probe-cmake-bypasses.patch  0002-wasi-graceful-shutdown.patch
patches/mysql-wasi/files/include/: mysql_wasi_libc_shim.h  mysql_wasi_runtime_shim.h  mysql_wasi_socket_shim.h  netdb.h  pwd.h  syslog.h
patches/mysql-wasi/files/include/sys/: resource.h  times.h
patches/mysql-wasi/files/protobuf-host-wrapper/: CMakeLists.txt
patches/mysql-wasi/files/vio/: mysql_wasi_socket_shim.c
patches/openssl-wasi/: 0001-wasi-disable-issetugid-probe.patch
scripts/: bench-tcp.py  build-openssl-wasi.sh  build-single.sh  fetch-mysql-source.sh  fetch-openssl-source.sh  install-release.ps1  install-release.sh  probe-mysql-wasi-port.sh  probe-mysql-wasi.sh  run-server.ps1  test-lifecycle.sh  test-windows-smoke.ps1  verify-dev-fixture.sh
src/: guest_errno.rs  host_files.rs  host_sockets.rs  host_sockets_windows.rs  main.rs
