[package]
name = "waasmtime-mysql"
version = "0.1.1"
edition = "2024"
build = "build.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
wasmtime = "46.0.1"
wasmtime-wasi = { version = "46.0.1", default-features = false, features = ["p1"] }

[build-dependencies]
wat = "1.0"

[features]
default = []
dev-fixture = []

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
